--- a/back_end/package.json
+++ b/back_end/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
