--- a/back_end/package.json
+++ b/back_end/package.json
@@ -13,7 +13,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "toobusy-js": "^0.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
