--- a/back_end/package.json
+++ b/back_end/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
+    "express-slow-down": "^1.3.1",
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
