--- a/back_end/package.json
+++ b/back_end/package.json
@@ -14,6 +14,7 @@
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "toobusy-js": "^0.5.1"
