--- a/back_end/package.json
+++ b/back_end/package.json
@@ -12,11 +12,13 @@
     "express-session": "^1.17.1",
     "express-slow-down": "^1.3.1",
     "helmet": "^4.2.0",
+    "js-yaml": "^3.14.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
+    "swagger-ui-express": "^4.1.4",
     "toobusy-js": "^0.5.1"
   },
   "devDependencies": {
