--- a/back_end/docs-spec.yml
+++ b/back_end/docs-spec.yml
@@ -110,13 +110,6 @@ paths:
               schema:
                 type: string
                 example:  Wrong password
-        '401':
-          description: Unauthorized request
-          content:
-            application/json: 
-              schema:
-                type: string
-                example:  Please login
         '404':
           description: User not found
           content:
@@ -137,6 +130,35 @@ paths:
       summary: READ ALL USERS
       produces: application/json
       responses:
+        '200':
+          description: Returns an array of all users
+          content:
+            application/json: 
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+        '401':
+          description: Unauthorized request
+          content:
+            application/json: 
+              schema:
+                type: string
+                example:  Please login
+        '404':
+          description: Users not found
+          content:
+            application/json: 
+              schema: 
+                type: string
+                example: User not found
+        '500':
+          description: Internal error
+          content:
+            application/json: 
+              schema:
+                type: object
+                example:  {error: {}}
   /api/users/:id:
     get:
       tags: [Users]
@@ -181,7 +203,8 @@ components:
         image_url:
           type: string
         birthdate:
-          type: date
+          type: string
+          format: date
         parentEmail:
           type: string
         restricted:
@@ -191,11 +214,12 @@ components:
         contactable:
           type: boolean
         createdAt:
-          type: date
+          type: string
+          format: date-time
         updatedAt:
-          type: date
+          type: string
+          format: date-time
       example:
-        id: 5
         user_name: JohnDoe123
         email: johndoe@mail.com
         password: Password123!
@@ -203,6 +227,4 @@ components:
         birthdate: 1988-10-21
         restricted: false
         shareWithPartners: true
-        contactable: true
-        createdAt: '2020-11-13 10:14:17'
-        updatedAt: '2020-11-13 10:14:17'
+        contactable: true 
