--- a/back_end/docs-spec.yml
+++ b/back_end/docs-spec.yml
@@ -205,7 +205,77 @@ paths:
       tags: [Users]
       summary: UPDATE A USER
       produces: application/json
+      parameters:
+      - name: id
+        in: path
+        description: the user's id
+        required: true
+        schema:
+          type: string
+          style: simple
+          example: localhost:3000/api/users/4
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user_name:
+                  type: string
+                email: 
+                  type: string
+                password: 
+                  type: string
+                image_url: 
+                  type: string
+                birthdate: 
+                  type: string
+                  format: date
+                restricted: 
+                  type: boolean
+                shareWithPartners: 
+                  type: boolean
+                contactable: 
+                  type: boolean
+              example:
+                user_name: JohnDoe123
+                email: johndoe@mail.com
+                password: Password123!
+                image_url: "http://localhost:3000/images/imagename1605263493723.jpg"
+                birthdate: 1988-10-21
+                restricted: false
+                shareWithPartners: true
+                contactable: true
       responses:
+        '201':
+          description: User updated
+          content:
+            application/json: 
+              schema:
+                type: string
+                example:  User updated
+        '401':
+          description: Unauthorized request
+          content:
+            application/json: 
+              schema:
+                type: string
+                example:  Please login
+        '404':
+          description: User not found
+          content:
+            application/json: 
+              schema: 
+                type: string
+                example: User not found
+        '500':
+          description: Internal error
+          content:
+            application/json: 
+              schema:
+                type: object
+                example:  {error: {}}
     delete:
       tags: [Users]
       summary: DELETE A USER
