add the eslint rule for line-breaks style matters

--- a/front_end/package.json
+++ b/front_end/package.json
@@ -42,7 +42,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "linebreak-style": ["error", "windows"]
+    }
   },
   "browserslist": [
     "> 1%",
