disable the rule for line breaking

--- a/front_end/package.json
+++ b/front_end/package.json
@@ -43,7 +43,7 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "linebreak-style": ["error", "windows"]
+      "linebreak-style": 0
     }
   },
   "browserslist": [
