Create the addPost actions and newPost mutation

--- a/front_end/package.json
+++ b/front_end/package.json
@@ -44,7 +44,9 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "linebreak-style": 0
+      "linebreak-style": 0,
+      "no-shadow": ["error", { "allow": ["state"] }],
+      "no-console": "off"
     }
   },
   "browserslist": [
