--- a/front_end/package.json
+++ b/front_end/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.9.7",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -45,7 +46,14 @@
     },
     "rules": {
       "linebreak-style": 0,
-      "no-shadow": ["error", { "allow": ["state"] }],
+      "no-shadow": [
+        "error",
+        {
+          "allow": [
+            "state"
+          ]
+        }
+      ],
       "no-console": "off"
     }
   },
