--- a/front_end/package.json
+++ b/front_end/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.9.7",
+    "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -54,7 +55,8 @@
           ]
         }
       ],
-      "no-console": "off"
+      "no-console": "off",
+      "camelcase": "off"
     }
   },
   "browserslist": [
