--- a/front_end/package.json
+++ b/front_end/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.9.7",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
+    "vue-observe-visibility": "^0.4.6",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
