create a component for lazy loading on scroll

--- a/front_end/package.json
+++ b/front_end/package.json
@@ -57,7 +57,8 @@
         }
       ],
       "no-console": "off",
-      "camelcase": "off"
+      "camelcase": "off",
+      "no-unneeded-ternary": "off"
     }
   },
   "browserslist": [
