--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "aws-sdk": "^2.864.0",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -16,9 +17,10 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.2.5",
-    "socket.io": "^3.1.1",
     "sequelize": "^6.5.0",
+    "socket.io": "^3.1.1",
     "swagger-ui-express": "^4.1.6",
     "toobusy-js": "^0.5.1"
   },
